--- a/01-htmlFundamentals/index.html
+++ b/01-htmlFundamentals/index.html
@@ -20,6 +20,7 @@
           <a href="#">Flexbox</a>
           <a href="#">CSS Grid</a>
         </nav>
+        <div class="clear"><!-- Added to clear the floats--></div>
       </header>
 
       <!-- Giving structure with semantic - article (because it is a blog) -->
@@ -32,9 +33,11 @@
             alt="Laura Jones picture"
             height="50"
             width="50"
+            class="author-img"
           />
 
-          <p id="author">
+          <p id="author" class="author">
+            <!-- author for floats -->
             Posted by <strong>Laura Jones</strong> on Monday, June 21st 2027
           </p>
 
