--- a/01-htmlFundamentals/css-grid.html
+++ b/01-htmlFundamentals/css-grid.html
@@ -36,11 +36,60 @@
         /* STARTER */
         font-family: sans-serif;
         background-color: #ddd;
-        font-size: 40px;
+        font-size: 30px;
         margin: 40px;
 
         /* CSS GRID */
+        display: grid;
+
+        /* grid-template-columns: 200px 200px 100px 100px; */ /* Two columns with the respective width, the first row has the height of the tallest element (defined in the green) */
+
+        /* grid-template-columns: 1fr 1fr 1fr 1fr; equivalent to the code below (4 columns, 1fr) */
+        grid-template-columns: repeat(4, 1fr);
+
+        /* grid-template-rows: 300px 200px; */ /* defining the height manually - the green is unchanged */
+
+        /* We can also use fr units on rows. However we need to remember that the green div has a specified height, so if we use 1fr unit, 150px will be the measure of 1fr */
+
+        grid-template-rows: 1fr 1fr; /* all get the same size as the green, but if we remove the height from the element, the new height will be defined by the tallest element, the 6 (longest word, if we collapse the window it will be the first to add height) */
+
+        /* If we specify a height to the container, the rows respond accordingly because not there is space to fill */
+
+        /* height: 500px; */
+
+        /* gap: 30px; */
+        column-gap: 20px;
+        row-gap: 60px;
+
+        /* TEMPORARY - REMOVE AFTER LESSONS */
+        display: none;
       }
+
+      /* Manually placing a grid item into another grid cell (other than the one defined/default in the html) */
+      /* For this we need to inspect the grid in the dev tools, so that we can see the grid numbers */
+
+      .el--8 {
+        /* Remember that these are properties used on grid items */
+        /* grid-column: 2 / 3;  */
+        /* From column number 2 to column number 3*/
+        /* grid-row: 1 / 2;  */
+        /* Same principle but in rows */
+      }
+
+      .el--2 {
+        /* If the second value is just one more than the first one we can omit it */
+        /* If the second value is more than the one related to the first, the item expands to occupy 2 or more columns/rows */
+        /* Shortcut - start at one and then span across three cells (1 / span 3;)*/
+        /* grid-column: 1/3; */
+        /* grid-column: 1 / span 2; */
+        /* To the end is -1  (1/ -1) This is why we have the negative numbers in the grid dev tools 1 is also -1 */
+        /* grid-column: 1/ -1; */
+        /* grid-row: 2; */
+      }
+
+      /* .el--6 {
+        grid-row: 1 / -1;
+      } */
 
       .container--2 {
         /* STARTER */
@@ -53,6 +102,30 @@
         height: 600px;
 
         /* CSS GRID */
+        display: grid;
+        grid-template-columns: 125px 200px 125px;
+        grid-template-rows: 250px 100px;
+        gap: 50px;
+        /* Aligning grid items is different from flexbox because we can align both the tracks inside the container and align the grid items inside of the tracks */
+
+        /* 1 - Aligning the grid tracks inside of the grid container (the columns and the rows inside of the container): distributing empty space */
+
+        justify-content: center;
+        /* All the tracks go to the center of the container */
+        /* justify-content: space-between; */
+
+        align-content: center;
+        /* The entire grid is centered inside of the grid container */
+
+        /* 2 - Aligning items inside of the cells: moving items around inside of the cells */
+        align-items: center;
+        justify-items: center;
+      }
+
+      /* overwriting individually */
+      .el--3 {
+        align-self: end;
+        justify-self: end;
       }
     </style>
   </head>
