Finished components and layout patterns

--- a/03-components/01-accordion.html
+++ b/03-components/01-accordion.html
@@ -224,4 +224,5 @@ GREY COLOR - Text: #343a40
   IMPORTANT THINGS TO TAKE
   1. Display flex with flex direction to column (also inverting the align and the justify items)
   2. The work that is done with classes, so later we can manipulate state with javascript. 
+  3. classes separated by space, the second is a child - DESCENDENCE SELECTOR
 -->
