--- a/03-components/04-paginationComponent.html
+++ b/03-components/04-paginationComponent.html
@@ -42,15 +42,18 @@
         width: 600px;
         height: 100px;
         display: flex;
-        justify-content: space-between;
+        justify-content: center;
         align-items: center;
         margin: 200px auto;
-        padding: 10px;
+        gap: 24px;
       }
-      .btn {
+      .page-link {
         border: 1px solid #087f5b;
+        /* border: none; */
+        color: #343a40;
         background-color: #fff;
-        font-size: 16px;
+        text-decoration: none;
+        font-size: 18px;
         display: flex;
         width: 40px;
         height: 40px;
@@ -60,17 +63,42 @@
         border-radius: 50%;
         cursor: pointer;
       }
+      .btn-box {
+        border: 1px solid #087f5b;
+        background-color: #fff;
+        width: 48px;
+        height: 48px;
+        border-radius: 50%;
+        /* display: flex;
+        justify-content: center;
+        align-items: center; */
+        cursor: pointer;
+      }
       .btn-icon {
         stroke: #087f5b;
         width: 24px;
         height: 24px;
-        /* padding: 24px; */
+      }
+      .active-link {
+        background-color: #087f5b;
+        color: #fff;
+      }
+
+      .page-link:hover {
+        background-color: #087f5b;
+        color: #fff;
+      }
+      .btn-box:hover {
+        background-color: #087f5b;
+      }
+      .btn-icon:hover {
+        stroke: #fff;
       }
     </style>
   </head>
   <body>
     <div class="buttons">
-      <button class="btn">
+      <button class="btn-box">
         <svg
           xmlns="http://www.w3.org/2000/svg"
           fill="none"
@@ -86,15 +114,15 @@
           />
         </svg>
       </button>
-      <button class="btn">1</button>
-      <button class="btn">2</button>
-      <button class="btn">3</button>
-      <button class="btn">4</button>
-      <button class="btn">5</button>
-      <button class="btn">6</button>
-      <span class="span">...</span>
-      <button class="btn">23</button>
-      <button class="btn">
+      <a href="#" class="page-link">1</a>
+      <a href="#" class="page-link">2</a>
+      <a href="#" class="page-link active-link">3</a>
+      <a href="#" class="page-link">4</a>
+      <a href="#" class="page-link">5</a>
+      <a href="#" class="page-link">6</a>
+      <span class="dots">...</span>
+      <a href="#" class="page-link">23</a>
+      <button class="btn-box">
         <svg
           xmlns="http://www.w3.org/2000/svg"
           fill="none"
