--- a/01-htmlFundamentals/css-grid.html
+++ b/01-htmlFundamentals/css-grid.html
@@ -14,7 +14,6 @@
       }
       .el--3 {
         background-color: green;
-        height: 150px;
       }
       .el--4 {
         background-color: goldenrod;
@@ -126,6 +125,10 @@
       .el--3 {
         align-self: end;
         justify-self: end;
+      }
+
+      .el {
+        padding: 10px;
       }
     </style>
   </head>
